fix version printer